--- a/style.css
+++ b/style.css
@@ -1,7 +1,10 @@
-#circle {
+#moving-circle {
     width: 5rem;
     height: 5rem;
     border-radius: 5rem;
     background-color: teal;
     border: 0.2rem solid rgb(0, 78, 78);
+    position: fixed;
+    top: 50%;
+    left: 50%;
 }
